Bug 1077002 - Give a better error message when showModalDialog is used in e10s. r=bholley